# metoptlab1

./: pyproject.toml
metopt/: binary.py  chord.py  main.py  newton.py  utils.py
metoptlab1/: golden_ratio.py
src/: argparser.py  binary.py  chord.py  golden_ratio.py  main.py  newton.py  quadratic_approximation.py  utils.py
src/solvers/: binary.py  golden_ratio.py  newton.py
